correct background image on sites and footer alignment

--- a/src/styles/partials/_layout.css
+++ b/src/styles/partials/_layout.css
@@ -10,7 +10,7 @@
     width: 100vw;
     min-height: 100vh;
     overflow-x: hidden;
-    background: url('../../asstets/images/background.png') no-repeat center center;
+    background: url('../../asstets/images/background.png') no-repeat 100% 100%;
   }
 
   main {
@@ -19,7 +19,7 @@
   }
 
   .main{
-    height: 100%;
+    min-height: 82vh;
   }
   .centered {
     text-align: center;
